fix: review changes

--- a/src/content/docs/de/guides/client-side-scripts.mdx
+++ b/src/content/docs/de/guides/client-side-scripts.mdx
@@ -6,7 +6,7 @@ description: >-
 i18nReady: true
 ---
 
-Du kannst deinen Astro-Komponenten Interaktivität hinzufügen, ohne ein UI-Framework (/de/core-concepts/framework-components/) wie React, Svelte, Vue usw. zu verwenden, indem du standardmäßige HTML-`<script>`-Tags verwendest. So kannst du JavaScript im Browser ausführen lassen und deinen Astro-Komponenten Funktionen hinzufügen.
+Du kannst deinen Astro-Komponenten Interaktivität hinzufügen, [ohne ein UI-Framework](/de/core-concepts/framework-components/) wie React, Svelte, Vue usw. zu verwenden, indem du standardmäßige HTML-`<script>`-Tags verwendest. So kannst du JavaScript im Browser ausführen lassen und deinen Astro-Komponenten Funktionen hinzufügen.
 
 ## Client-seitige Skripte
 
@@ -36,7 +36,7 @@ Standardmäßig verarbeitet und bündelt Astro `<script>`-Tags und unterstützt 
 
 In `.astro`-Dateien kannst du clientseitiges JavaScript hinzufügen, indem du ein (oder mehrere) `<script>`-Tags hinzufügst.
 
-In diesem Beispiel wird durch das Hinzufügen der Komponente `<Hallo />` zu einer Seite eine Nachricht auf der Browserkonsole aufgezeichnet.
+In diesem Beispiel wird durch das Hinzufügen der Komponente `<Hello />` zu einer Seite eine Nachricht auf der Browserkonsole aufgezeichnet.
 
 ```astro title="src/components/Hello.astro"
 <h1>Willkommen, Welt!</h1>
@@ -62,7 +62,7 @@ In diesem Beispiel wird durch das Hinzufügen der Komponente `<Hallo />` zu eine
 </script>
 ```
 
-Um die Bündelung des Skripts zu vermeiden, kannst du die Direktive "is:inline" verwenden.
+Um die Bündelung des Skripts zu vermeiden, kannst du die Direktive `is:inline` verwenden.
 
 ```astro title="src/components/InlineScript.astro" "is:inline"
 <script is:inline>
@@ -187,11 +187,11 @@ In Astro-Komponenten läuft der Code in [Frontmatter](/de/core-concepts/astro-co
 
 Eine Möglichkeit, dies zu tun, ist die Verwendung von [`data-*`-Attributen](https://developer.mozilla.org/en-US/docs/Learn/HTML/Howto/Use_data_attributes), um den Wert von Variablen in deiner HTML-Ausgabe zu speichern. Skripte, einschließlich benutzerdefinierter Elemente, können diese Attribute dann mit der Eigenschaft `dataset` eines Elements lesen, sobald dein HTML im Browser geladen ist.
 
-In dieser Beispielkomponente wird eine "Message"-Eigenschaft in einem "Data-Message"-Attribut gespeichert, sodass das benutzerdefinierte Element "this.dataset.message" lesen und den Wert der Eigenschaft im Browser abrufen kann.
+In dieser Beispielkomponente wird eine `message`-Eigenschaft in einem `data-message`-Attribut gespeichert, sodass das benutzerdefinierte Element `this.dataset.message` lesen und den Wert der Eigenschaft im Browser abrufen kann.
 
 ```astro title="src/components/AstroGreet.astro" {2} /data-message={.+}/ "this.dataset.message"
 ---
-const { message = "Willkommen, Welt! } = Astro.props;
+const { message = 'Willkommen, Welt!' } = Astro.props;
 ---
 
 <!-- Speichere die Nachrichten-Props als Datenattribut. -->
