add updated content

--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -1,11 +1,142 @@
 ---
-title: Lignes de Commandes
+title: Commandes CLI
 i18nReady: true
 ---
 import Since from '~/components/Since.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
+
+Vous pouvez utiliser l'interface en ligne de commande (CLI) fournie par Astro pour développer, construire et prévisualiser votre projet à partir d'une fenêtre de terminal.
+
+### Commandes `astro`
+
+Utilisez le CLI en exécutant l'une des **commandes** documentées sur cette page avec votre gestionnaire de paquets préféré, suivie éventuellement de toutes les **options**. Les options personnalisent le comportement d'une commande.
+
+L'une des commandes que vous utiliserez le plus souvent est `astro dev`. Cette commande démarre le serveur de développement et vous donne un aperçu votre site mis à jour en direct dans un navigateur pendant que vous travaillez :
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # démarre le serveur de développement
+  npx astro dev
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # démarre le serveur de développement
+  pnpm astro dev
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # démarre le serveur de développement
+  yarn astro dev
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Vous pouvez taper `astro --help` dans votre terminal pour afficher une liste de toutes les commandes disponibles :
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npx astro --help
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm astro --help
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn astro --help
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Le message suivant s'affichera dans votre terminal :
+
+```bash
+astro [commande] [...options]
+
+Commandes
+              add  Ajouter une intégration.
+            build  Build votre projet et l'écrire sur le disque.
+            check  Vérifier votre projet pour les erreurs.
+              dev  Démarrer le serveur de développement.
+             docs  Ouvrir la documentation dans votre navigateur Web.
+          preview  Prévisualiser votre Build localement.
+             sync  Générer les types de collection de contenu.
+        telemetry  Configurer les paramètres de télémétrie.
+        
+Options globales
+--config <chemin>  Spécifier votre fichier de configuration.
+  --root <chemin>  Spécifier le dossier racine de votre projet.
+     --site <url>  Spécifier le site de votre projet.
+--base <pathname>  Spécifier la base de votre projet.
+        --verbose  Activer l'enregistrement détaillé.
+         --silent  Désactiver tous les journaux.
+        --version  Afficher le numéro de version et quitter.
+           --help  Afficher ce message d'aide.
+```
+
+### Scripts `package.json`
+
+Vous pouvez également utiliser des scripts dans `package.json` pour des versions plus courtes de ces commandes. L'utilisation d'un script vous permet d'utiliser les mêmes commandes avec lesquelles vous pourriez être familier dans d'autres projets, telles que `npm run build`.
+
+Pour les commandes `astro` les plus courantes (`astro dev`, `astro build` et `astro preview`), les scripts suivants sont ajoutés automatiquement lorsque vous créez un projet en utilisant [l'assistant d'installation `create astro`](/fr/install/auto/#1-utiliser-lassistant-dinstallation).
+
+Lorsque vous suivez les instructions pour [installer Astro manuellement](/fr/install/manual/#2-installer-astro), vous êtes invité à ajouter vous-même ces scripts. Vous pouvez également ajouter manuellement d'autres scripts à cette liste pour toute commande que vous utilisez fréquemment. 
+
+```json title="package.json"
+{
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
+  }
+}
+```
+
+Vous utiliserez souvent ces commandes `astro`, ou les scripts qui les exécutent, sans aucune option. Ajoutez des options à la commande lorsque vous souhaitez personnaliser le comportement de la commande. Par exemple, vous souhaitez peut-être démarrer le serveur de développement sur un port différent ou Build votre site en incluant les pages de brouillon.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  npm run start -- --port 8080
+    
+  # Build votre site en incluant les pages de brouillon en utilisant le script `build` dans `package.json`
+  npm run build -- --drafts
+  ```
+  (Le `--` supplémentaire avant l'option `--port` est nécessaire pour que `npm` transmette vos options à la commande `astro`.)
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  pnpm start --port 8080
+    
+  # Build votre site en incluant les pages de brouillon en utilisant le script `build` dans `package.json`
+  pnpm build --drafts
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # lance le serveur de développement sur le port 8080 en utilisant le script `start` dans `package.json`
+  yarn start --port 8080
+    
+  # Build votre site en incluant les pages de brouillon en utilisant le script `build` dans `package.json`
+  yarn build --drafts
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+{/*
+
+CONTENU ORIGINAL Sur Lequel Nous Pouvons Toujours revenir si le nouveau contenu est trop amical
 
 Vous pouvez utiliser l'interface en ligne de commande (CLI) fournie par Astro pour développer, construire et prévisualiser votre projet à partir d'une fenêtre de terminal.
 
@@ -54,6 +185,8 @@ Si vous avez démarré votre projet en utilisant [l'assistant `create astro`](/f
   ```
   </Fragment>
 </PackageManagerTabs>
+
+*/}
 
 ## `astro dev`
 
@@ -105,6 +238,14 @@ Peut être combiné avec les [options courantes](#options-courantes) documentée
 Lance les diagnostics (comme la vérification de type dans les fichiers `.astro`) sur votre projet et signale les erreurs à la console. Si des erreurs sont trouvées, le processus se terminera avec un code de **1**.
 
 Cette commande est destinée à être utilisée dans un processus d'intégration continue.
+
+<h3>Options</h3>
+
+Utilisez ces options pour personnaliser le comportement d'une commande.
+
+#### `--watch`
+
+La commande surveillera toute modification apportée aux fichiers `.astro` et signalera toute erreur.
 
 :::note
 Cette commande ne vérifie les types que dans les fichiers `.astro`.
