--- a/src/pages/en/guides/baas/google-firebase.mdx
+++ b/src/pages/en/guides/baas/google-firebase.mdx
@@ -10,4 +10,4 @@ stub: true
 
 ## Hosting Resources
 
-- Check out [Deploy your Astro Site to Google’s Firebase Hosting](https://docs.astro.build/en/guides/deploy/google-firebase/)
+- Check out [Deploy your Astro Site to Google’s Firebase Hosting](/en/guides/deploy/google-firebase/)
