Sarah text edits to baas.mdx

--- a/src/content/docs/en/guides/baas.mdx
+++ b/src/content/docs/en/guides/baas.mdx
@@ -23,16 +23,16 @@ BaaS can be seen as a way to abstract away the complexities of building and mana
 
 ## Why would I use a Backend as a Service
 
-Using a Backend as a Service (BaaS) in a JavaScript framework like Astro.js can bring several benefits, such as:
+Using a Backend as a Service (BaaS) in a JavaScript framework like Astro can bring several benefits, such as:
 
-Reduced Development Time: BaaS provides pre-built backend components, such as databases, authentication, and storage, which can save time compared to building and configuring these components from scratch.
+Reduced Development Time: BaaS provides pre-built backend components such as databases, authentication, and storage. This can save time compared to building and configuring these components from scratch.
 
-Scalability: BaaS providers typically offer scalable infrastructure, so as your application grows, you can easily scale up the backend to handle increased traffic and data storage needs.
+Scalability: BaaS providers typically offer scalable infrastructure.  As your application grows, you can easily scale up the backend to handle increased traffic and data storage needs.
 
-Cost Savings: BaaS eliminates the need to purchase and manage hardware and infrastructure, and often includes cost-saving features such as auto-scaling, which can help keep costs low.
+Cost Savings: BaaS eliminates the need to purchase and manage hardware and infrastructure, and often includes cost-saving features such as auto-scaling.
 
-Increased Focus on Application Development: By outsourcing backend management to a BaaS provider, developers can focus on building and improving the frontend and user experience of their application.
+Increased Focus on Application Development: By outsourcing backend management to a BaaS provider, developers can focus on building and improving frontend and user experience.
 
-Simplified Maintenance: BaaS providers typically handle maintenance, security, and updates for the backend components, freeing up developers to focus on adding new features and improving the application.
+Simplified Maintenance: BaaS providers typically handle maintenance, security, and updates for the backend components. This frees up developers to focus on adding new features or improving existing ones.
 
-In summary, using BaaS in a JavaScript framework like Astro.js can help you develop and launch applications faster, more cost-effectively, and with less maintenance overhead.
+In summary, using BaaS in a JavaScript framework like Astro can help you develop and launch faster, more cost-effectively, and with less maintenance overhead.
