new community link

--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -903,5 +903,7 @@ const pokemon = {
 
 - Video: [How Astro made my site 100x faster](https://www.youtube.com/watch?v=cOxA3kMYtkM).
 
+- Blog post: [Migrating from Next.js to Astro](https://johnzanussi.com/posts/nextjs-to-astro-migration).
+
 - Blog Post: [From NextJS to Astro](https://vanntile.com/blog/next-to-astro).
 - Blog Post: [Converting Next.js to Astro](https://ericclemmons.com/blog/converting-nextjs-to-astro).
