--- a/src/content/docs/en/recipes/build-forms.mdx
+++ b/src/content/docs/en/recipes/build-forms.mdx
@@ -170,7 +170,7 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
         }
         if (!Object.keys(errors).length) {
           await registerUser({name, email, password});
-          return Astro.redirect("/login")
+          return Astro.redirect("/login");
         }
       } catch (error) {
         if (error instanceof Error) {
