--- a/src/content/docs/en/recipes/docker.mdx
+++ b/src/content/docs/en/recipes/docker.mdx
@@ -16,7 +16,7 @@ Docker images and containers can be deployed to many different platforms, like A
 
 ## Creating a Dockerfile
 
-Create a file called `Dockerfile` in your project's root directory. This file contains the instructions to build your site, which will differ depending on your needs. This guide can't show all possible options, but will give you three starting
+Create a file called `Dockerfile` in your project's root directory. This file contains the instructions to build your site, which will differ depending on your needs. This guide can't show all possible options, but will give you starting points for SSR and static mode.
 
 ### SSR
 
