--- a/src/content/docs/en/recipes/docker.mdx
+++ b/src/content/docs/en/recipes/docker.mdx
@@ -1,6 +1,6 @@
 ---
 title: Build your Astro Site with Docker
-description: How to build your Astro site to the web using Docker.
+description: Learn how to build your Astro site using Docker.
 type: recipe
 i18nReady: false
 ---
