code review suggestions
Co-authored-by: Igor Kowalczyk <majonezexe@protonmail.com>

--- a/src/content/docs/pl/concepts/why-astro.mdx
+++ b/src/content/docs/pl/concepts/why-astro.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 
 Astro to **wszechstronny** **framework** do budowania **szybkich** stron internetowych skoncentrowanych na **dostarczaniu treści**.
 
-Dlaczego wybrać Astro, a nie inny webowy framework? Oto pięć głównych projektowych zasad, które pomogą wytłumaczyć dlaczego zbudowaliśmy Astro, problemy, które rozwiązuje, i dlaczego Astro może być najlepszym wyborem dla Twojego projektu lub zespołu:
+Dlaczego wybrać Astro, a nie inny webowy framework? Oto pięć głównych zasad projektowych, które pomogą wytłumaczyć dlaczego zbudowaliśmy Astro, problemy które rozwiązuje, i dlaczego Astro może być najlepszym wyborem dla Twojego projektu lub zespołu:
 
 #### Astro jest...
 
@@ -42,7 +42,7 @@ Model SPA ma swoje korzyści. Jednak są one okupione dodatkową złożonością
 
 ## Domyślnie szybki
 
-Dobra wydajność zawsze jest ważna, lecz dla stron opartych o treści jest *wyjątkowo* krytyczna. To, że niska wydajność negatywnie wpływa na zaangażowanie, konwersje i traci pieniądze, zostało dobrze sprawdzone. Na przykład:
+Dobra wydajność zawsze jest ważna, lecz dla stron opartych o treści jest *wyjątkowo* krytyczna. To, że niska wydajność negatywnie wpływa na zaangażowanie, konwersje i potencjalny zysk, zostało dobrze sprawdzone. Na przykład:
 
 - Każde 100ms szybciej → 1% więcej konwersji ([Mobify](https://web.dev/why-speed-matters/), dodatkowe $380,000/rok)
 - 50% szybciej → 12% więcej sprzedaży ([AutoAnything](https://www.digitalcommerce360.com/2010/08/19/web-accelerator-revs-conversion-and-sales-autoanything/))
@@ -53,14 +53,14 @@ Dobra wydajność zawsze jest ważna, lecz dla stron opartych o treści jest *wy
 
 W wielu webowych frameworkach łatwo jest zbudować stronę, która wygląda świetnie podczas developmentu, tylko po to, żeby po zahostowaniu ładowała się boleśnie wolno. Winowajcą często jest JavaScript, ponieważ telefony i mniej wydajne urządzenia użytkowników rzadko dorównują wydajnością laptopom deweloperów.
 
-Magia Astro bierze się z połączenia dwóch wartości opisanych powyżej — skupieniu na treści oraz bazującej na serwerze architekturze MPA — pozwala to podejmować decyzje i dostarczać funkcjonalności, których nie są w stanie dostarczyć inne frameworki. Rezultatem jest niesamowita wydajność dla każdej strony, prosto z pudełka. Naszym celem jest: **Zbudowanie wolnej strony przy użyciu Astro powinno być prawie niemożliwe.**
+Magia Astro bierze się z połączenia dwóch wartości opisanych powyżej — skupieniu na treści oraz bazującej na serwerze architekturze MPA — pozwala to podejmować decyzje i dostarczać funkcjonalności, których nie są w stanie dostarczyć inne frameworki. Rezultatem jest niesamowita wydajność dla każdej strony. Naszym celem jest: **Zbudowanie wolnej strony przy użyciu Astro powinno być prawie niemożliwe.**
 
 Strona zbudowana z Astro jest w stanie [ładować się 40% szybciej używając 90% mniej JavaScriptu](https://twitter.com/t3dotgg/status/1437195415439360003), niż ta sama strona zbudowana przy pomocy najpopularniejszego frameworku używającego Reacta. Nie musicie wierzyć naszym słowom: zobaczcie jak wydajność Astro odbiera Ryan'owi Carniato (twórcy frameworków Solid.js i Marko) [mowę](https://youtu.be/2ZEMb_H-LYE?t=8163).
 
 
 ## Łatwy w użyciu
 
-**Celem Astro jest przystępność dla każdego web developera.** Astro zostało zaprojektowane tak, by być znajome i dostępne, niezależnie od poziomu umiejętności, czy poprzednich doświadczeń z web developmentem. 
+**Celem Astro jest przystępność dla każdego web developera.** Astro zostało zaprojektowane tak, by być łatwe i dostępne, niezależnie od poziomu umiejętności, czy poprzednich doświadczeń z web developmentem. 
 
 Zaczęliśmy, upewniając się, że będziecie w stanie użyć którejkolwiek z waszych ulubionych bibliotek do budowania interfejsów. React, Preact, Svelte, Vue, Solid, Lit i inne są wspieranymi metodami tworzenia interfejsów użytkownika w projektach Astro.
 
@@ -75,6 +75,6 @@ Jednym z naszych ulubionych powiedzeń jest: **złożoność jest wyborem.** Zap
 
 **Astro to wszechstronny framework, który ma w sobie wszystko czego potrzebujecie, żeby zbudować stronę.** Astro zawiera składnię do tworzenia komponentów, routing bazujący na systemie plików, zarządzanie assetami, mechanizm budowy i bundlowania, optymalizacje, ładowanie danych i wiele więcej. Jesteście w stanie tworzyć świetne strony nie wychodząc poza zestaw funkcjonalności oferowany przez Astro.
 
-Jeśli potrzebujecie więcej kontroli, możecie rozszerzyć Astro korzystając z ponad [100+ integracji](https://astro.build/integrations/) jak [React](https://www.npmjs.com/package/@astrojs/react), [Svelte](https://www.npmjs.com/package/@astrojs/svelte), [Vue](https://www.npmjs.com/package/@astrojs/vue), [Tailwind CSS](https://www.npmjs.com/package/@astrojs/tailwind), [MDX](https://www.npmjs.com/package/@astrojs/mdx), [optymalizacja obrazów](https://www.npmjs.com/package/@astrojs/image), i więcej. Połączcie Astro z [waszym ulubionym systemem CMS](https://astro.build/integrations/) lub [deploy'ujcie na wasz ulubiony hosting](/pl/guides/deploy/) używając pojedynczej komendy.
+Jeśli potrzebujecie więcej kontroli, możecie rozszerzyć Astro korzystając z ponad [100+ integracji](https://astro.build/integrations/) jak [React](https://www.npmjs.com/package/@astrojs/react), [Svelte](https://www.npmjs.com/package/@astrojs/svelte), [Vue](https://www.npmjs.com/package/@astrojs/vue), [Tailwind CSS](https://www.npmjs.com/package/@astrojs/tailwind), [MDX](https://www.npmjs.com/package/@astrojs/mdx), [optymalizacje obrazów](https://www.npmjs.com/package/@astrojs/image), i wiele więcej. Połączcie Astro z [waszym ulubionym systemem CMS](https://astro.build/integrations/) lub [deploy'ujcie na wasz ulubiony hosting](/pl/guides/deploy/) używając pojedynczej komendy.
 
 Astro ma agnostyczne podejście do interfejsu użytkownika, co oznacza, że możecie **użyć waszego ulubionego frameworku UI (ang. *"Bring Your Own UI Framework"* - BYOF)**. React, Preact, Solid, Svelte, Vue, i Lit są oficjalnie wspierane przez Astro. Możecie nawet korzystać z różnych frameworków w ramach jednej strony, co ułatwi przyszłe migracje i pomoże uniknąć zbytniej zależności od pojedynczego frameworku.
