ci: update integration docs

--- a/src/content/docs/en/guides/integrations-guide/sitemap.mdx
+++ b/src/content/docs/en/guides/integrations-guide/sitemap.mdx
@@ -104,7 +104,7 @@ After verifying that the sitemaps are built, you can add them to your site's `<h
 </head>
 ```
 
-```yaml ins={4} title="public/robots.txt"
+```txt ins={4} title="public/robots.txt"
 User-agent: *
 Allow: /
 
