--- a/src/content/docs/es/guides/data-fetching.mdx
+++ b/src/content/docs/es/guides/data-fetching.mdx
@@ -69,33 +69,37 @@ export default Movies;
 
 Astro también puede usar `fetch()` para consultar a un servidor GraphQL con cualquier query de GraphQL válida.
 
-```astro title="src/components/Film.astro" "await fetch"
+```astro title="src/components/Weather.astro" "await fetch"
 ---
-const response = await fetch("https://swapi-graphql.netlify.app/.netlify/functions/index",
+const response = await fetch("https://graphql-weather-api.herokuapp.com",
   {
-    method: 'POST',
+    method:'POST',
     headers: {'Content-Type':'application/json'},
     body: JSON.stringify({
       query: `
-        query getFilm ($id:ID!) {
-          film(id: $id) {
-            title
-            releaseDate
+        query getWeather($name:String!) {
+            getCityByName(name: $name){
+              name
+              country
+              weather {
+                summary {
+                    description
+                }
+              }
+            }
           }
-        }
-      `,
+        `,
       variables: {
-        id: "ZmlsbXM6MQ==",
+          name: "Toronto",
       },
     }),
-  });
-
+  })
 const json = await response.json();
-const { film } = json.data;
+const weather = json.data
 ---
-<h1>Fetching information about Star Wars: A New Hope</h1>
-<h2>Title: {film.title}</h2>
-<p>Year: {film.releaseDate}</p>
+<h1>Obtén datos sobre el clima en el momento de la compilación</h1>
+<h2>{weather.getCityByName.name}, {weather.getCityByName.country}</h2>
+<p>Clima: {weather.getCityByName.weather.summary.description}</p>
 ```
 
 ## Fetching de datos desde un Headless CMS
