--- a/src/content/docs/ja/guides/data-fetching.mdx
+++ b/src/content/docs/ja/guides/data-fetching.mdx
@@ -36,33 +36,37 @@ const randomUser = data.results[0]
 
 Astroはまた、`fetch()`を使用して任意の有効なGraphQLクエリでGraphQLサーバーにクエリを投げられます。
 
-```astro title="src/components/Film.astro" "await fetch"
+```astro
 ---
-const response = await fetch("https://swapi-graphql.netlify.app/.netlify/functions/index",
+const response = await fetch("https://graphql-weather-api.herokuapp.com",
   {
-    method: 'POST',
+    method:'POST',
     headers: {'Content-Type':'application/json'},
     body: JSON.stringify({
       query: `
-        query getFilm ($id:ID!) {
-          film(id: $id) {
-            title
-            releaseDate
+        query getWeather($name:String!) {
+            getCityByName(name: $name){
+              name
+              country
+              weather {
+                summary {
+                    description
+                }
+              }
+            }
           }
-        }
-      `,
+        `,
       variables: {
-        id: "ZmlsbXM6MQ==",
+          name: "Tokyo",
       },
     }),
-  });
-
+  })
 const json = await response.json();
-const { film } = json.data;
+const weather = json.data
 ---
-<h1>Fetching information about Star Wars: A New Hope</h1>
-<h2>Title: {film.title}</h2>
-<p>Year: {film.releaseDate}</p>
+<h1>天気をビルド時にフェッチします。</h1>
+<h2>{weather.getCityByName.name}, {weather.getCityByName.country}</h2>
+<p>天気: {weather.getCityByName.weather.summary.description}</p>
 ```
 
 :::note
