Add note about how `env.d.ts` needs updating

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -38,6 +38,13 @@ export default defineConfig({
 });
 ```
 
+When you next run Astro, it will update your `src/env.d.ts` file to configure types for you. To do this manually, replace the `astro/client` reference with `astro/client-image`:
+
+```ts title="src/env.d.ts" del={1} ins={2}
+/// <reference types="astro/client" />
+/// <reference types="astro/client-image" />
+```
+
 ### Move your images to `src/assets/`
 
 Create an `src/assets/` folder, which Astro will recognize as your new assets folder.
