Note that env.d.ts needs updating for assets support (#2818)

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -32,10 +32,17 @@ To enable built-in asset support, add the following lines to your `astro.config.
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
- experimental: {
-  assets: true
- }
+  experimental: {
+   assets: true
+  }
 });
+```
+
+When you next run Astro, it will update your `src/env.d.ts` file to configure types for you. To do this manually, replace the `astro/client` reference with `astro/client-image`:
+
+```ts title="src/env.d.ts" del={1} ins={2}
+/// <reference types="astro/client" />
+/// <reference types="astro/client-image" />
 ```
 
 ### Move your images to `src/assets/`
