Apply suggestions from Yan code review
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/recipes/docker.mdx
+++ b/src/content/docs/en/recipes/docker.mdx
@@ -7,7 +7,7 @@ i18nReady: false
 
 [Docker](<https://docker.com>) is a tool to build, deploy, and run applications using containers.
 
-Docker images and containers can be deployed to many different platforms, like AWS, Azure, and [Google Cloud](</en/guides/deploy/google-cloud/#cloud-run-ssr-and-static>). This recipe won't cover how to deploy your site to a specific platform, but show you how to set up Docker for your project.
+Docker images and containers can be deployed to many different platforms, like AWS, Azure, and [Google Cloud](</en/guides/deploy/google-cloud/#cloud-run-ssr-and-static>). This recipe won't cover how to deploy your site to a specific platform but will show you how to set up Docker for your project.
 
 ## Prerequisites
 
@@ -16,7 +16,7 @@ Docker images and containers can be deployed to many different platforms, like A
 
 ## Creating a Dockerfile
 
-Create a file called `Dockerfile` in your project's root directory. This file contains the instructions to build your site, which will differ depending on your needs. This guide can't show all possible options, but will give you starting points for SSR and static mode.
+Create a file called `Dockerfile` in your project's root directory. This file contains the instructions to build your site, which will differ depending on your needs. This guide can't show all possible options but will give you starting points for SSR and static mode.
 
 ### SSR
 
