es: layout traslated

--- a/src/content/docs/es/tutorial/4-layouts/3.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/3.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Combine layouts to get the best of both worlds
+title: Combine layouts para obtener lo mejor de ambos mundos
 description: |-
-  Tutorial: Build your first Astro blog —
-  Add your basic page layout to the layout that formats your blog posts
+  Tutorial: Crea tu primer blog Astro —
+  Añade tu layout básico al layout que da formato a los posts de tu blog
 ---
 import Blanks from '~/components/tutorial/Blanks.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -14,20 +14,20 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Now that you have your first `.md` blog post written, let's make it look like the rest of the pages on your website!
+Ahora que ya tienes escrito tu primer post `.md`, vamos a hacer que se parezca al resto de páginas de tu sitio web.
 
 <PreCheck>
-  - Nest your blog post layout inside your main page layout
+  - Anida el layout de los posts de tu blog dentro del layout de tu página principal
 </PreCheck>
 
-## Nest your two layouts
+## Anida tus dos layouts
 
-You already have a `BaseLayout.astro` for defining the overall layout of your pages. 
+Ya tienes un `BaseLayout.astro` para definir el layout general de tus páginas. 
 
-`MarkdownPostLayout.astro` gives you some additional templating for common blog post properties such as `title` and `date`, but your blog posts don't look like the other pages on your site. You can achieve that by **nesting layouts**.
+El `MarkdownPostLayout.astro` te proporciona algunas plantillas adicionales para las propiedades comunes de los posts de tu blog, como `title` y `date`, pero los posts de tu blog no tienen el mismo aspecto que el resto de páginas de tu sitio. Puedes conseguirlo **anidando layouts**.
 
 
-1. In `src/layouts/MarkdownPostLayout.astro`, import `BaseLayout.astro` and use it to wrap the entire template content. Don't forget to pass the `pageTitle` prop:
+1. En `src/layouts/MarkdownPostLayout.astro`, importa `BaseLayout.astro` y úsalo para envolver todo el contenido de la plantilla. No olvides pasar la propiedad `pageTitle`:
 
     ```astro title="src/layouts/MarkdownPostLayout.astro" ins={2,5,12}
     ---
@@ -38,66 +38,66 @@ You already have a `BaseLayout.astro` for defining the overall layout of your pa
       <h1>{frontmatter.title}</h1>
       <p>{frontmatter.pubDate.slice(0,10)}</p>
       <p><em>{frontmatter.description}</em></p>
-      <p>Written by: {frontmatter.author}</p>
+      <p>Escrito por: {frontmatter.author}</p>
       <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
       <slot />
     </BaseLayout>
     ```
 
-2. Check your browser preview at `localhost:3000/posts/post-1`. Now you should see content rendered by:
+2. Compruebe la vista previa de su navegador en `localhost:3000/posts/post-1`. Ahora debería ver el contenido renderizado por:
 
-    - Your **main page layout**, including your styles, navigation links, and social footer.
-    - Your **blog post layout**, including frontmatter properties like the description, date, title, and image
-    - Your **individual blog post Markdown content**, including just the text written in this post
+    - Tu ** layout de página principal**, incluyendo tus estilos, enlaces de navegación y pie de página social.
+    - Tu **blog post layout**, incluyendo propiedades frontmatter como la descripción, fecha, título e imagen.
+    - Tu **contenido Markdown individual para el blog post**, incluyendo sólo el texto escrito en este post
 
-3. Notice that your page title is now displayed twice, once by each layout.
+3. Observe que el título de su página se muestra ahora dos veces, una por cada layout.
 
-    Remove the line that displays your page title from `MarkdownPostLayout.astro`:
+    Elimina la línea que muestra el título de tu página de `MarkdownPostLayout.astro`:
 
     ```astro title="src/layouts/MarkdownPostLayout.astro" del={2}
     <BaseLayout pageTitle={frontmatter.title}>
       <h1>{frontmatter.title}</h1>
       <p>{frontmatter.pubDate.slice(0,10)}</p>
       <p><em>{frontmatter.description}</em></p>
-      <p>Written by: {frontmatter.author}</p>
+      <p>Escrito por: {frontmatter.author}</p>
       <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
       <slot />
     </BaseLayout>
     ```
 
-5. Check your browser preview again at `localhost:3000/posts/post-1` and verify that this line is no longer displayed and that your title is only displayed once. Make any other adjustments necessary to ensure that you do not have any duplicated content.
+5. Compruebe de nuevo la vista previa de su navegador en `localhost:3000/posts/post-1` y verifique que esta línea ya no aparece y que su título sólo se muestra una vez. Realice cualquier otro ajuste necesario para asegurarse de que no tiene contenido duplicado.
 
 
-  Make sure that:
+  Asegúrese de que:
 
-    - Each blog post shows the same page template, and no content is missing. (If one of your blog posts is missing content, check its frontmatter properties.)
+    - Cada post muestra la misma plantilla de página y no falta contenido. (Si a uno de tus posts le falta contenido, comprueba sus propiedades frontmatter).
 
-    - No content is duplicated on a page. (If something is being rendered twice, then be sure to remove it from `MarkdownPostLayout.astro`.)
+    - Ningún contenido se duplica en una página. (Si algo se está renderizando dos veces, asegúrate de eliminarlo de `MarkdownPostLayout.astro`).
 
-    If you'd like to customize your page template, you can.
+    Si quieres personalizar la plantilla de tu página, puedes hacerlo.
 
 
 
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-1. This allows you to nest one layout inside another and take advantage of working with modular pieces.
+1. Esto le permite anidar un layout dentro de otro y aprovechar las ventajas de trabajar con piezas modulares.
 
     <MultipleChoice>
       <Option>
-        continuous deployment
+        despliegue continuo
       </Option>
       <Option>
-        responsive design
+        diseño adaptable
       </Option>
       <Option isCorrect>
-        component-based design
+        diseño basado en componentes
       </Option>
     </MultipleChoice>
 
-2. Multiple layouts are particularly useful for projects that contain Markdown pages, like a...
+2. Los layouts múltiples son especialmente útiles para proyectos que contienen páginas Markdown, como...
 
     <MultipleChoice>
       <Option isCorrect>
@@ -111,7 +111,7 @@ You already have a `BaseLayout.astro` for defining the overall layout of your pa
       </Option>
     </MultipleChoice>
 
-3. Which of these provides templating for all your pages?
+3. ¿Cuál de ellos proporciona plantillas para todas sus páginas?
 
     <MultipleChoice>
       <Option>
@@ -131,10 +131,10 @@ You already have a `BaseLayout.astro` for defining the overall layout of your pa
 ## Checklist
 
 <Checklist>
-- [ ] I can nest layouts, checking for any duplicated elements.
+- [ ] Puedo anidar layouts, comprobando si hay elementos duplicados.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Nesting Layouts in Astro](/en/core-concepts/layouts/#nesting-layouts)
+- [Layouts anidados en Astro](/en/core-concepts/layouts/#nesting-layouts)
