--- a/src/content/docs/es/tutorial/4-layouts/1.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/1.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Build your first layout
+title: Construya su primer layout
 description: |-
-  Tutorial: Build your first Astro blog —
-  Refactor common elements into a reusable page layout
+  Tutorial: Crea tu primer blog Astro —
+  Refactorización de elementos comunes en un diseño de página reutilizable
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -14,18 +14,18 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Refactor common elements into a page layout
-  - Use an Astro `<slot />` element to place page contents within a layout
-  - Pass page-specific values as props to its layout
+  - Refactorización de elementos comunes en un diseño de página
+  - Utilice un elemento Astro `<slot />` para colocar el contenido de la página dentro de un diseño
+  - Pasar valores específicos de la página como props a su layout
 </PreCheck>
 
-You still have some Astro components repeatedly rendered on every page. Let's refactor again to create a shared page layout!
+Todavía tienes algunos componentes Astro repetidamente renderizados en cada página. Volvamos a refactorizar para crear un layout de página compartido.
 
-## Create your first layout component
+## Cree su primer componente de layout
 
-1. Create a new file at the location `src/layouts/BaseLayout.astro`. (You will need to create a new `layouts` folder first.)
+1. Crea un nuevo archivo en la ubicación `src/layouts/BaseLayout.astro`. (Tendrás que crear primero una nueva carpeta `layouts`).
 
-2. Copy the **entire contents** of `index.astro` into your new file, `BaseLayout.astro`.
+2. Copie el **contenido completo** de `index.astro` en su nuevo archivo, `BaseLayout.astro`.
 
     ```astro title="src/layouts/BaseLayout.astro"
     ---
@@ -53,9 +53,9 @@ You still have some Astro components repeatedly rendered on every page. Let's re
     </html>
     ```
 
-## Use your layout on a page
+## Utilice su layout en una página
 
-3. Replace the code at `src/pages/index.astro` with the following:
+3. Sustituya el código en `src/pages/index.astro` por el siguiente:
 
     ```astro title="src/pages/index.astro"
     ---
@@ -63,13 +63,13 @@ You still have some Astro components repeatedly rendered on every page. Let's re
     const pageTitle = "Home Page";
     ---
     <BaseLayout>
-      <h2>My awesome blog subtitle</h2>
+      <h2>Mi impresionante subtítulo del blog</h2>
     </BaseLayout>
     ```
  
-4. Check the browser preview again to notice what did (or, spoiler alert: did _not_!) change.
+4. Compruebe de nuevo la vista previa del navegador para ver qué ha cambiado (o, alerta de spoiler: ¡no ha cambiado!).
     
-5. Add a `<slot />` element to `src/layouts/BaseLayout.astro` just above the footer component, then check the browser preview of your Home page and notice what really _did_ change this time!
+5. Añada un elemento `<slot />` a `src/layouts/BaseLayout.astro` justo encima del componente de pie de página y, a continuación, compruebe la vista previa del navegador de su página de inicio y observe lo que realmente ha cambiado esta vez.
 
     ```astro title="src/layouts/BaseLayout.astro" ins={18}
     ---
@@ -98,11 +98,11 @@ You still have some Astro components repeatedly rendered on every page. Let's re
     </html>
     ```
 
- The `<slot />` allows you to inject (or "slot in") **child content** written between opening and closing `<Component></Component>` tags to any `Component.astro` file.
+ La etiqueta `<slot />` permite inyectar (o "introducir") **contenido hijo** escrito entre las etiquetas de apertura y cierre `<Component></Component>` en cualquier archivo `Component.astro`.
 
-## Pass page-specific values as props
+## Pasar valores específicos de la página como props
 
-1. Pass the page title to your layout component from `index.astro` using a component attribute: 
+1. Pase el título de la página a su componente layout desde `index.astro` utilizando un atributo component: 
 
     ```astro title="src/pages/index.astro" 'pageTitle={pageTitle}'
     ---
@@ -110,11 +110,11 @@ You still have some Astro components repeatedly rendered on every page. Let's re
     const pageTitle = "Home Page";
     ---
     <BaseLayout pageTitle={pageTitle}>
-      <h2>My awesome blog subtitle</h2>
+      <h2>Mi impresionante subtítulo del blog</h2>
     </BaseLayout>
     ```
 
-2. Change the script of your `BaseLayout.astro` layout component to receive a page title via `Astro.props` instead of defining it as a constant.
+2. Cambia el script de tu componente layout `BaseLayout.astro` para recibir un título de página a través de `Astro.props` en lugar de definirlo como una constante.
 
     ```astro title="src/layouts/BaseLayout.astro" del={5} ins={6}
     ---
@@ -126,76 +126,76 @@ You still have some Astro components repeatedly rendered on every page. Let's re
     ---
     ```
 
-3. Check your browser preview to verify that your page title has not changed. It has the same value, but is now being rendered dynamically. And now, each individual page can specify its own title to the layout.
+3. Compruebe la vista previa de su navegador para verificar que el título de su página no ha cambiado. Tiene el mismo valor, pero ahora se muestra dinámicamente. Y ahora, cada página individual puede especificar su propio título al layout.
 
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Use your layout everywhere
+## Pruébelo usted mismo - Utilice su layout en todas partes
 
-**Refactor** your other pages (`blog.astro` and `about.astro`) so that they use your new `<BaseLayout>` component to render the common page elements.
+**Refactoriza** tus otras páginas (`blog.astro` y `about.astro`) para que utilicen tu nuevo componente `<BaseLayout>` para renderizar los elementos comunes de la página.
 
-Don't forget to:
+No lo olvides:
 
-- Pass a page title as props via a component attribute.
+- Pasar un título de página como props a través de un atributo de componente.
 
-- Let the layout be responsible for the HTML rendering of any common elements.
+- Deje que el layout se encargue de la representación HTML de los elementos comunes.
 
-- Delete anything from each page that that page is no longer responsible for rendering, because it is being handled by the layout, including: 
+- Eliminar cualquier cosa de cada página que esa página ya no es responsable de la representación, ya que está siendo manejado por el layout, incluyendo: 
 
-  - HTML elements
-  - Components and their imports 
-  - CSS rules in a `<style>` tag (e.g. `<h1>` in your About page)
-  - `<script>` tags
+  - Elementos HTML
+  - Componentes y sus importaciones 
+  - Reglas CSS en una etiqueta `<style>` (por ejemplo, `<h1>` en su página Acerca de).
+  - Etiquetas `<script>`.
 </Box>
 
 
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-1. An Astro component (`.astro` file) can function as a:
+1. Un componente Astro (archivo `.astro`) puede funcionar como un:
 
     <MultipleChoice>
-      <Option>page</Option>
-      <Option>UI component</Option>
+      <Option>página</Option>
+      <Option>componente UI</Option>
       <Option>layout</Option>
-      <Option>an image</Option>
-      <Option isCorrect>all of the above, because Astro components are so functional! 🏗️</Option>
+      <Option>una imagen</Option>
+      <Option isCorrect>todo lo anterior, ¡porque los componentes Astro son muy funcionales! 🏗️</Option>
     </MultipleChoice>
 
-2. To display a page title on the page, you can:
+2. Para mostrar un título de página en la página, puede:
 
     <MultipleChoice>
       <Option>
-        use a standard HTML element on the page with static text (e.g `<h1>Home Page</h1>`)
+        utilizar un elemento HTML estándar en la página con texto estático (por ejemplo `<h1>Página de inicio</h1>`)
       </Option>
       <Option>
-        use a standard HTML element on the page referring to a variable defined in your component's frontmatter script (e.g. `<h1>{pageTitle}</h1>`)
+        utilizar un elemento HTML estándar en la página que haga referencia a una variable definida en el script frontmatter de su componente (por ejemplo, `<h1>{pageTitle}</h1>`)
       </Option>
       <Option>
-        use a layout component on the page, passing the title as a component attribute (e.g. `<BaseLayout title="Home Page" />` or `<BaseLayout title={pageTitle} />`)
+        utilizar un componente layout en la página, pasando el título como atributo del componente (por ejemplo, `<BaseLayout title="Home Page" />` o `<BaseLayout title={pageTitle} />`)
       </Option>
       <Option isCorrect>
-        all of the above, because Astro lets you use plain HTML or supercharge it with some script and components! 💪
+        todo lo anterior, porque Astro te permite utilizar HTML plano o sobrecargarlo con algunos scripts y componentes. 💪
       </Option>
     </MultipleChoice>
 
-3. Information can be passed from one component to another by:
+3. La información puede pasar de un componente a otro mediante:
 
     <MultipleChoice>
       <Option>
-        importing a UI component and rendering it in the template of another component
+        importar un componente de UI y representarlo en la plantilla de otro componente
       </Option>
       <Option>
-        passing props to a component where it is rendered via a component attribute
+        pasar props a un componente donde se renderiza mediante un atributo del componente
       </Option>
       <Option>
-        sending HTML content to be rendered inside another component using a `<slot />` placeholder
+        enviar contenido HTML para que se muestre dentro de otro componente utilizando un marcador de posición `<slot />`.
       </Option>
       <Option isCorrect>
-        all of the above, because Astro was built to take advantage of component-based design! 🧩
+        todo lo anterior, porque Astro se creó para aprovechar las ventajas del diseño basado en componentes. 🧩
       </Option>
     </MultipleChoice>
 
@@ -206,13 +206,13 @@ Don't forget to:
 ## Checklist
 
 <Checklist>
-- [ ] I can create an Astro layout component with a `<slot />`.
-- [ ] I can send page-specific properties to a layout.
+- [ ] Puedo crear un componente de layout Astro con `<slot />`.
+- [ ] Puedo enviar propiedades específicas de la página a un layout.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Astro layout components](/en/core-concepts/layouts/)
+- [Componentes del layout Astro](/en/core-concepts/layouts/)
 
 - [Astro `<slot />`](/en/core-concepts/astro-components/#slots)
