--- a/src/content/docs/es/tutorial/4-layouts/2.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/2.mdx
@@ -1,11 +1,11 @@
 ---
 type: tutorial
-title: Create and pass data to a custom blog layout
+title: Crear y pasar datos a un layout de blog personalizado
 description: >-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Crea tu primer blog Astro —
 
-  Create a blog post layout for your Markdown files and pass it frontmatter
-  values as props
+  Crea un layout de entrada de blog para tus archivos Markdown y pásale los valores frontmatter
+  como props
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -14,66 +14,66 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Now that you have a layout for your pages, let's add a layout for blog posts!
+Ahora que ya tienes un layout para tus páginas, vamos a añadir un layout para las entradas del blog.
 
 <PreCheck>
-  - Create a new blog post layout for your Markdown files
-  - Pass YAML frontmatter values as props to layout component
+  - Cree un nuevo layout de entrada de blog para sus archivos Markdown
+  - Pasar valores frontmatter YAML como props al componente layout
 </PreCheck>
 
-## Add a layout to your blog posts
+## Añade un layout a las entradas de tu blog
 
-When you include the `layout` frontmatter property in an `.md` file, all of your frontmatter YAML values are available to the layout file.
+Al incluir la propiedad frontmatter `layout` en un archivo `.md`, todos los valores YAML de frontmatter estarán disponibles para el archivo layout.
 
-1. Create a new file at `src/layouts/MarkdownPostLayout.astro`
+1. Crea un nuevo archivo en `src/layouts/MarkdownPostLayout.astro`.
 
-2. Copy the following code into `MarkdownPostLayout.astro`
+2. Copia el siguiente código en `MarkdownPostLayout.astro`.
 
     ```astro title="src/layouts/MarkdownPostLayout.astro"
     ---
     const { frontmatter } = Astro.props;
     ---
     <h1>{frontmatter.title}</h1>
-    <p>Written by {frontmatter.author}</p>
+    <p>Escrito por {frontmatter.author}</p>
     <slot />
     ```
 
-3. Add the following frontmatter property in `post-1.md`
+3. Añada la siguiente propiedad frontmatter en `post-1.md`.
 
     ```markdown title="src/pages/posts/post-1.md" ins={2}
     ---
     layout: ../../layouts/MarkdownPostLayout.astro
-    title: 'My First Blog Post'
+    title: 'Mi primer post en el blog'
     pubDate: 2022-07-01
-    description: 'This is the first post of my new Astro blog.'
-    author: 'Astro Learner'
+    description: 'Este es el primer post de mi nuevo blog Astro.'
+    author: 'Astro alumno'
     image:
         url: 'https://astro.build/assets/blog/astro-1-release-update/cover.jpeg' 
-        alt: 'The Astro logo with the word One.'
-    tags: ["astro", "blogging", "learning in public"]
+        alt: 'El logotipo de Astro con la palabra One.'
+    tags: ["astro", "bloguear", "aprender en público"]
     ---
     ```
 
-4. Check your browser preview again at `localhost:3000/posts/post-1` and notice what the layout has added to your page. 
+4. Compruebe de nuevo la vista previa de su navegador en `localhost:3000/posts/post-1` y observe lo que el layout ha añadido a su página. 
 
-5. Add the same layout property to your two other blog posts `post-2.md` and `post-3.md`. Verify in your browser that your layout is also applied to these posts.
+5. Añade la misma propiedad layout a tus otros dos post `post-2.md` y `post-3.md`. Comprueba en tu navegador que el layout también se aplica a estos post.
 
 :::tip
-When using layouts, you now have the option of including elements, like a page title, in the Markdown content or in the layout. Remember to visually inspect your page preview and make any adjustments necessary to avoid duplicated elements. 
+Al utilizar layouts, ahora tiene la opción de incluir elementos, como un título de página, en el contenido Markdown o en el layout. Recuerde inspeccionar visualmente la vista previa de su página y realizar los ajustes necesarios para evitar elementos duplicados. 
 :::
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Customize your blog post layout
+## Pruébalo tú mismo - Personaliza el layout de los posts de tu blog
 
-**Challenge**: Identify items common to every blog post, and use `MarkdownPostLayout.astro` to render them, instead of writing them in your Markdown in `post-1.md` and in every future blog post.
+**Reto**: Identifica los elementos comunes a cada post del blog, y utiliza `MarkdownPostLayout.astro` para renderizarlos, en lugar de escribirlos en tu Markdown en `post-1.md` y en cada futuro post del blog.
 
-Here's an example of refactoring your code to include the `pubDate` in the layout component instead of writing it in the body of your Markdown:
+He aquí un ejemplo de refactorización de su código para incluir la `pubDate` en el componente layout en lugar de escribirla en el cuerpo de su Markdown:
 
 ```markdown title="src/pages/posts/post-1.md" del={1}
 Published on: 2022-07-01
 
-Welcome to my new blog about learning Astro! Here, I will share my learning journey as I build a new website.
+¡Bienvenido a mi nuevo blog sobre el aprendizaje de Astro! Aquí, voy a compartir mi viaje de aprendizaje a medida que construyo un nuevo sitio web.
 ```
 
 ```astro title="src/layouts/MarkdownPostLayout.astro" ins={5}
@@ -81,14 +81,14 @@ Welcome to my new blog about learning Astro! Here, I will share my learning jour
 const { frontmatter } = Astro.props;
 ---
 <h1>{frontmatter.title}</h1>
-<p>Published on: {frontmatter.pubDate.slice(0,10)}</p>
-<p>Written by {frontmatter.author}</p>
+<p>Publicado el: {frontmatter.pubDate.slice(0,10)}</p>
+<p>Escrito por {frontmatter.author}</p>
 <slot />
 ```
 
-Refactor as much as you think is useful to you, and add as much to your layout as you want, remembering that everything that you add to your layout is one less thing you will write in each and every blog post!
+Refactoriza todo lo que consideres útil y añade a tu layout todo lo que quieras, ¡recordando que todo lo que añadas a tu layout es una cosa menos que escribirás en todas y cada una de los posts de tu blog!
 
-Here is an example of a refactored layout that leaves only individual blog post content rendered by the slot. Feel free to use this, or create your own! 
+Este es un ejemplo de un layout refactorizado que deja sólo el contenido individual del post del blog renderizado por el slot. Siéntete libre de usarlo o de crear el tuyo propio.
 
 ```astro title="src/layouts/MarkdownPostLayout.astro"
 ---
@@ -97,31 +97,31 @@ const { frontmatter } = Astro.props;
 <h1> {frontmatter.title}</h1>
 <p>{frontmatter.pubDate.slice(0,10)}</p>
 <p><em>{frontmatter.description}</em></p>
-<p>Written by: {frontmatter.author}</p>
+<p>Escrito por: {frontmatter.author}</p>
 <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
 <slot />
 ```
 </Box>
 
 :::note[avoid duplication]
- Anything rendered by your layout does **not** need to be typed into your blog post! If you notice any duplication when you check your browser preview, then be sure to remove content from your Markdown file.
+ Todo lo que se muestre en el layout **no** tiene que escribirse en el post del blog. Si observa alguna duplicación al comprobar la vista previa de su navegador, asegúrese de eliminar el contenido de su archivo Markdown.
  :::
 
  
 
 <Box icon="question-mark">
 
-### Test your knowledge
-Can you figure out what should go in the blanks so that the following two components together produce working Astro code?
+### Pon a prueba tus conocimientos
+¿Puedes averiguar qué debe ir en los espacios en blanco para que los dos componentes siguientes produzcan juntos un código Astro que funcione?
 
 1.  ```markdown title="src/pages/posts/learning-astro.md"
     ---
     layout: ../../__________/MyMarkdownLayout.astro
-    title: "Learning About Markdown in Astro"
-    author: Astro Learner
+    title: "Aprendiendo sobre Markdown en Astro"
+    author: Astro alumno
     ____: 2022-08-08
     ---
-    I learned so much today! Astro allows me to write in Markdown, but also use variables from the frontmatter. I can even access those values in an Astro layout component.
+    ¡He aprendido mucho hoy! Astro me permite escribir en Markdown, pero también utilizar variables del frontmatter. Incluso puedo acceder a esos valores en un componente layout de Astro.
     ```
 
 2.  ```astro title="src/layouts/MarkdownLayout.astro"
@@ -130,21 +130,21 @@ Can you figure out what should go in the blanks so that the following two compon
     const { ___________ } = Astro.props
     ---
     <h1>{frontmatter.title}</h1>
-    <p>Written by:{frontmatter.______ } on {frontmatter.pubDate}</p>
+    <p>Escrito por:{frontmatter.______ } on {frontmatter.pubDate}</p>
     < _______ />
     <Footer />
     ```
     <details>
-        <summary>Show the blanks filled in!</summary>
+        <summary>¡Muestra los espacios en blanco rellenados!</summary>
 
         1.  ```markdown title="src/pages/posts/learning-astro.md" "../layouts" "pubDate:"
             ---
             layout: ../../layouts/MyMarkdownLayout.astro
-            title: "Learning About Markdown in Astro"
-            author: Astro Learner
+            title: "Aprendiendo sobre Markdown en Astro"
+            author: Astro alumno
             pubDate: 2022-08-08
             ---
-            I learned so much today! Astro allows me to write in Markdown, but also use variables from the frontmatter. I can even access those values in an Astro layout component.
+            ¡He aprendido mucho hoy! Astro me permite escribir en Markdown, pero también utilizar variables del frontmatter. Incluso puedo acceder a esos valores en un componente layout de Astro.
             ```
 
         2.  ```astro title="src/layouts/MarkdownLayout.astro" " Footer " " frontmatter " ".author" "slot"
@@ -153,7 +153,7 @@ Can you figure out what should go in the blanks so that the following two compon
             const { frontmatter } = Astro.props
             ---
             <h1>{frontmatter.title}</h1>
-            <p>Written by:{frontmatter.author } on {frontmatter.pubDate}</p>
+            <p>Escrito por:{frontmatter.author } on {frontmatter.pubDate}</p>
             < slot />
             <Footer />
             ```
@@ -165,17 +165,17 @@ Can you figure out what should go in the blanks so that the following two compon
 ## Checklist
 
 <Checklist>
-- [ ] I can add a layout property to a Markdown blog post in its YAML frontmatter.
-- [ ] I can create a separate layout for Markdown posts.
-- [ ] I can use values from a blog post's frontmatter in a layout component.
+- [ ] Puedo añadir una propiedad layout a un post de blog Markdown en su frontmatter YAML.
+- [ ] Puedo crear un layout separado para posts en Markdown.
+- [ ] Puedo utilizar valores del frontmatter de un post en un componente layout.
 </Checklist>
 
 </Box>
 
-### Resources
+### Recursos
 
-- [Markdown Layouts in Astro](/en/guides/markdown-content/#frontmatter-layout)
+- [Layouts de Markdown en Astro](/en/guides/markdown-content/#frontmatter-layout)
 
 - [Markdown Layout Props](/en/core-concepts/layouts/#markdown-layout-props)
 
-- [Introduction to YAML](https://dev.to/paulasantamaria/introduction-to-yaml-125f) <Badge>external</Badge>
+- [Introduccion a YAML](https://dev.to/paulasantamaria/introduction-to-yaml-125f) <Badge>externo</Badge>
