--- a/src/content/docs/es/tutorial/4-layouts/index.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/index.mdx
@@ -1,11 +1,11 @@
 ---
 type: tutorial
-unitTitle: Save time and energy with reusable page layouts
-title: 'Check in: Unit 4 - Layouts'
+unitTitle: Ahorre tiempo y energía con layouts de página reutilizables
+title: 'Regístrese: Unidad 4 - Layouts'
 description: >-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Crea tu primer blog Astro —
 
-  Use Astro layouts to share common elements and styles across your pages and
+  Utiliza los layout Astro para compartir elementos y estilos comunes en tus páginas y
   posts
 ---
 import Badge from '~/components/Badge.astro';
@@ -14,22 +14,22 @@ import Checklist from '~/components/Checklist.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 
 
-Now that you can build with components, let's create some custom layouts!
+Ahora que ya puedes construir con componentes, ¡vamos a crear algunos layouts personalizados!
 
-## Where are we now?
+## ¿Dónde estamos ahora?
 
 <StackblitzIntro tree="withastro/blog-tutorial-demo/tree/unit-4/start"/>
 
-## Where are we going?
+## ¿Adónde vamos?
 
-In this unit, you'll build layouts to share common elements and styles across your pages and blog posts.
+En esta unidad, crearás layouts para compartir elementos y estilos comunes en tus páginas y posts de blog.
 
-To do this, you will:
+Para ello:
 
-- Create reusable layout components
-- Pass content to your layouts with `<slot />`
-- Pass data from Markdown frontmatter to your layouts
-- Nest multiple layouts
+- Crear componentes de layout reutilizables
+- Pasa contenido a tus layouts con `<slot />`
+- Pasa datos de Markdown frontmatter a tus layouts
+- Varios layouts anidados
 
 
 
@@ -38,6 +38,6 @@ To do this, you will:
 ## Checklist
 
 <Checklist>
-- [ ] I am ready to take my page design to the next level with layouts!
+- [ ] ¡Estoy listo para llevar mi diseño de página al siguiente nivel con layouts!
 </Checklist>
 </Box>
