--- a/src/content/docs/en/recipes/docker.mdx
+++ b/src/content/docs/en/recipes/docker.mdx
@@ -48,7 +48,7 @@ FROM node:lts-alpine as runtime
 
 ### Static
 
-##### Apache (httpd)
+#### Apache (httpd)
 
 The following Dockerfile will build your site and serve it using Apache htppd on port `80` with the default configuration.
 
