fix: anchor links

--- a/src/content/docs/de/core-concepts/sharing-state.mdx
+++ b/src/content/docs/de/core-concepts/sharing-state.mdx
@@ -9,9 +9,9 @@ import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
 import LoopingVideo from '~/components/LoopingVideo.astro'
 import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
 
-Wenn du eine Astro-Website mit [Insel-Architektur / Partielle Hydratation](/de/concepts/islands/) aufbaust, bist du vielleicht schon auf dieses Problem gestoßen: **Ich möchte den Status zwischen meinen Komponenten teilen
+Wenn du eine Astro-Website mit [Insel-Architektur / Partielle Hydratation](/de/concepts/islands/) aufbaust, bist du vielleicht schon auf dieses Problem gestoßen: **Ich möchte den Status zwischen meinen Komponenten teilen.**
 
-UI-Frameworks wie React oder Vue nutzen ["Kontext"-Anbieter](https://reactjs.org/docs/context.html) die von anderen Komponenten konsumiert werden können. Bei der [partiellen Hydratation von Komponenten](/de/core-concepts/framework-components/#hydrating-interactive-components) in Astro oder Markdown kannst du diese Kontext-Wrapper jedoch nicht verwenden.
+UI-Frameworks wie React oder Vue nutzen ["Kontext"-Anbieter](https://reactjs.org/docs/context.html) die von anderen Komponenten konsumiert werden können. Bei der [partiellen Hydratation von Komponenten](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) in Astro oder Markdown kannst du diese Kontext-Wrapper jedoch nicht verwenden.
 
 Astro empfiehlt eine andere Lösung für die gemeinsame Speicherung auf der Client-Seite: [**Nano Stores**](https://github.com/nanostores/nanostores).
 
@@ -33,7 +33,7 @@ Dennoch gibt es eine Reihe von Alternativen, die du ausprobieren kannst. Dazu ge
 <summary>**🙋 Kann ich Nano Stores in `.astro`-Dateien oder anderen serverseitigen Komponenten verwenden?**</summary>
 
 Nano Stores _können_ in serverseitigen Komponenten importiert, beschrieben und gelesen werden, **aber wir empfehlen es nicht!** Das liegt an einigen Einschränkungen:
-- Das Schreiben in einen Store aus einer `.astro`-Datei oder einer [nicht-hydratatierten Komponente](/de/core-concepts/framework-components/#hydrating-interactive-components) hat _keine_ Auswirkung auf den Wert, der von [Client-seitigen Komponenten](/de/reference/directives-reference/#client-directives) empfangen wird.
+- Das Schreiben in einen Store aus einer `.astro`-Datei oder einer [nicht-hydratatierten Komponente](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) hat _keine_ Auswirkung auf den Wert, der von [Client-seitigen Komponenten](/de/reference/directives-reference/#client-directives) empfangen wird.
 - Du kannst einen Nano Store nicht als "prop" an clientseitige Komponenten übergeben.
 - Du kannst keine Änderungen aus einer `Astro`-Datei abonnieren, da Astro-Komponenten nicht neu gerendert werden.
 
